# vppsh

./: .gitignore  Cargo.toml  LICENSE.md  README.md  i18n.toml
.cargo/: config
i18n/mo/en/: vppsh.mo
i18n/mo/ru/: vppsh.mo
i18n/po/en/: vppsh.po
i18n/po/ru/: vppsh.po
i18n/pot/: vppsh.pot
i18n/pot/src/: lib.pot  main.pot
src/: conf_tui.rs  history.rs  lib.rs  main.rs
