[package]
name = "vppsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-i18n = "0.2.10"
clap = { version = "3.0", features = ["derive"] }
crossterm = { version = "0.24.0", features = ["event-stream"]}
futures = "0.3.21"
gettext = "0.4.0"
i18n-embed = { version = "0.13.4", features = ["gettext-system"] }
rust-embed = "6.4.0"
sys-locale = "0.2.1"
tokio = { version = "1", features = ["full"] }
tr = { version = "0.1.6", features = ["gettext"], default-features = false }
tui = "0.18.0"
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
